--- a/content/announcements/20251207.md
+++ b/content/announcements/20251207.md
@@ -8,12 +8,15 @@ published: true
 本日、いちから作り直した新しいホームページを公開致しました！
 
 # 新ホームページの特徴
-- UXを見直し、3種類の導線を用意、より使いやすいHPを作成致しました。
-- よりモダンかつUXを支えられるようなUIになるように見直しました。
-- 脱WordPress・Next.js + Tailwind CSSを用いて、より軽量で高速なサイトを実現致しました。
-- Azure 静的サイトを利用し、サーバーに何かあっても必要な情報は入手できるようにしました。
-- Markdownを用いて、簡単に編集できるようにしました。
-- 画像は、Cloudflare R2を利用し、より高速に、HP自体の容量は減るようになりました。
+- UX/UIの全面刷新：3種類の導線を用意し、より直感的で使いやすいモダンなデザインに生まれ変わりました。
+
+- 爆速・軽量化：脱WordPressを果たし、「Next.js + Tailwind CSS」を採用。ページ表示が非常に高速になりました。
+
+- 画像の最適化：Cloudflare R2の導入により、画像の読み込み速度が向上し、サクサク閲覧できます。
+
+- 災害（障害）への強さ：Azure Static Web Appsを採用し、マイクラサーバー本体にトラブルがあっても、ホームページは独立して稼働し続けられる構成にしました。
+
+- 更新の迅速化：Markdownベースの管理システムへ移行したため、これまで以上に素早い情報発信が可能になります。
 
 # 付随して以下の新機能及び規約を追加しました
 - [利用規約](server-guide/terms_of_service)を追加しました
