誤植を修正

--- a/content/announcements/20251224.md
+++ b/content/announcements/20251224.md
@@ -69,10 +69,10 @@ image: https://img.1necat.net/2025-12-24_00.09.54.png
 | **10.00%** | 飾りのキャンディケイン | 装飾 |
 | **10.00%** | クリスマスツリー | 装飾 |
 | **10.00%** | クリスマスキャンドル | 装飾 |
-| **15.00%** | パックアイス | 建材 |
-| **15.00%** | アイスクリーパー | その他 |
+| **15.00%** | パックアイス | 装飾 |
+| **15.00%** | アイスクリーパー | 装飾 |
 | **15.00%** | 氷のキャンドル | 装飾 |
-| **15.00%** | アイススパイダー | その他 |
+| **15.00%** | アイススパイダー | 装飾 |
 
 ※確率は設定上の値であり、実際の排出を完全に保証するものではありません。
 
